app/assets/stylesheets/earthworks.css
:root {
  --stanford-60-black: #767674;
  --stanford-fog-light-rgb: 244, 244, 244;
  --stanford-palo-alto-rgb: 23, 94, 84;
}

/* Selects both #main-content and navbar containers */
#main-container, .navbar-search > *, header .container, #feedback .container, #pre-footer .container, #su-footer .container {
  max-width:  1600px;

  @media (min-width: 575.98px) {
    padding-inline: 60px;
  }
}

.header-icons {
  color: var(--stanford-60-black);
  font-size: 0.875rem;
  line-height: 1.125rem;
}

.header-icons .blacklight-icons, .header-icons .blacklight-icons svg {
  height: .875rem;
  width: .875rem;
}

.palo-alto-base {
  --bs-dark-rgb: var(--stanford-palo-alto-rgb);
}

.home-header .blacklight-icons, .home-header .blacklight-icons svg {
  height: 1.5rem;
  width: 1.5rem;
}

.home-tab {
  margin-left: 2.3rem;
}

.component-container .card, .component-container .card-header, .component-container .card-body, .component-container .list-group, .component-container .list-group-item {
  background-color: inherit;
  border: none!important;
  padding: 0px!important;
  margin: 0px!important;
}

.component-container .card-header, .blacklight-catalog-show .page-sidebar .card-header h2 {
  font-size: calc(1.275rem + 0.3vw);
}

.component-container li a {
  color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
}

.component-container, .card.relations {
  --bs-border-radius: 4px;
  padding: 1.5rem 1rem;
}
.authentication {
  text-align:center;
}

.bg-fog-light {
  background-color: var(--stanford-fog-light);
}

.card.relations, .card.relations > * {
  border: none!important;
  --bs-list-group-bg: var(--stanford-fog-light);
  background-color: var(--stanford-fog-light);
  --bs-list-group-item-padding-y: 5px;
  --bs-list-group-item-padding-x: 0px;
  --bs-card-cap-padding-y: 0px;
  --bs-card-cap-padding-x: 0px;
}

.authentication .btn {
  --bs-btn-bg: var(--stanford-cardinal)!important;
  --bs-btn-border-color: var(--stanford-cardinal)!important;
  --bs-btn-hover-bg: var(--stanford-digital-red-dark)!important;
  --bs-btn-hover-border-color: var(--stanford-digital-red-dark)!important;
  --bs-btn-active-bg: var(--stanford-digital-red-darker)!important;
  --bs-btn-active-border-color: var(--stanford-digital-red-darker)!important;
}

.blacklight-icons-stanford svg path {
  fill: var(--stanford-cardinal);
}

.blacklight-icons-restricted svg path {
  fill: var(--stanford-digital-red)
}

.documents-list .result:hover, .documents-list .result:focus {
  box-shadow: -4px 4px 4px 0px #0000000D,
               4px 4px 4px 0px #0000000D;
  }

.search-widgets {
  /* center these widgets on small screens */
  @media (max-width: 575.98px) {
    justify-content: center;
  }
}

.search-widgets .btn, .clear-bookmarks {
  --bs-btn-font-size: .875rem;
  --bs-border-radius: 4px;
  --bs-btn-padding-x: 6px;
  --bs-btn-padding-y: 2px;
  --bs-btn-line-height: 1;
  height: 1.6rem;
  align-self: center;
}

.paginate-section {
  /* center these widgets on small screens */
  @media (max-width: 575.98px) {
    text-align: center;
    & > .page-links {
      padding-right: 0;
    }
  }
}

.page-links {
  @media (max-width: 991.98px) { 
    /* override GBL here so that it centers correctly */
   padding: 0.375rem 0;
  } 
}

.sort-pagination, .pagination-search-widgets {
  padding-bottom: .5rem;
  border-bottom: 2px solid var(--bs-border-color);
}

.search-q {
  padding: 0 0 0 2rem;
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='currentColor' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0'/%3E%3C/svg%3E") no-repeat left;
  background-size: 1rem;
  outline: none;
}

.input-group > .search-autocomplete-wrapper {
  border: none;
}

.search-query-form {
  border: 1px solid #ABABA9;
  padding: .5rem;
  border-radius: .25rem;
  background-color: white;
  width: 100%; /* overrides https://github.com/projectblacklight/blacklight/blob/69373f202753f04ec6aca179fdf8fa01248a9edf/app/assets/stylesheets/blacklight/_header.scss#L32 */
}

.navbar-search {
  --bs-light-rgb: var(--stanford-fog-light-rgb);
  --bs-navbar-padding-y: 1rem;
}

/* Search bar outside of homepage: override GBL to set a smaller max-width */
.navbar-search .search-query-form {
  @media (min-width: 768px) {
    max-width: 520px;
  }
}

.navbar-search > .container-fluid {
  @media (max-width: 767.98px) {
    justify-content: center;
  }
}
.search-query-form input:focus {
  box-shadow: none;
}
.search-query-form .search-btn {
  border-radius: .25rem!important;
  padding: 2px 6px;
  align-items: center;
}

/* TODO: when we get a new blacklight release (v8.3.1)
Remove file app/components/blacklight/icons/search_component.rb
Remove lines 138-140
Uncomment lines 142-144
*/

.search-query-form .search-btn .blacklight-icons {
  width: auto;
}

/* .search-query-form .search-btn .blacklight-icons-search {
  display: none;
} */

#main-container #leaflet-viewer  {
  /* match sul-embed border */
  border: 1px solid black;

  @media (min-width: 992px) {
    height: 620px;
  }
}

/* Styles for search result description expand/collapse */

.expand-collapse .btn-outline-primary {
  display: flex;
  &.active {
    color: white;
    background-color:var(--stanford-digital-blue-darker);
  }
}

.expand-collapse i {
  align-self: center;
}

/* Styles for code snippet */

.code-snippet-content {
  background-color: #f4f4f4 !important;
  pre {
    font-size: 1rem;
  }
}

.code-snippet-tab {
  color: var(--stanford-digital-blue);
  font-size: 1.5rem;
}

.code-snippet-tab.active {
  color: var(--stanford-digital-blue);
  text-decoration: underline !important;
  text-decoration-color: var(--stanford-digital-blue) !important;
}

.code-snippet-tab.nav-link.active {
  color: var(--stanford-digital-blue);
}

.bd-clipboard {
  position:relative;
  float:right;
}

.btn-clipboard{
  background-color: white !important;
}

.btn-clipboard:active, .btn-clipboard:hover, .btn-clipboard:focus {
  color: var(--stanford-digital-blue-dark) !important;
  border-color: var(--stanford-digital-blue-dark) !important;
}

.logout-dropdown {
  background-color:  rgb(var(--stanford-palo-alto-dark-rgb));
  --bs-navbar-active-color: white;
  border-radius: .25rem;
}

.document-counter {
  display: none;
}

label.toggle-bookmark {
  --bs-primary: rgb(var(--bs-link-color-rgb));
  color: rgb(var(--bs-link-color-rgb));
}

.header-tools .btn {
  --bs-btn-border-color: none;
  --bs-btn-hover-border-color: none;
  --bs-btn-active-border-color: none;
}

.back-to-search::before {
  content: "\f129";
  font-family: "bootstrap-icons";
  margin-right: .25rem;
  vertical-align: middle;
}

#citationLink, #emailLink{
  padding-left: 1rem;
  --bs-btn-padding-x: .25rem;
  --bs-btn-padding-y: 0;
}

#citationLink {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' width='14' height='14' viewBox='0 0 512 512' aria-label='Citation' role='img'%3E%3Ctitle%3ECitation%3C/title%3E%3Cpath fill='%23006cb8' d='M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z'%3E%3C/path%3E%3C/svg%3E");
}

#emailLink {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' width='14' height='14' viewBox='0 0 28 28' aria-label='Email' role='img'%3E%3Ctitle%3EEmail%3C/title%3E%3Cpath fill='%23006cb8' d='M28 11.1v12.4a2.5 2.5 0 0 1-2.5 2.5h-23A2.5 2.5 0 0 1 0 23.5V11.1c.47.51 1 .96 1.58 1.35 2.6 1.77 5.22 3.53 7.76 5.4 1.32.96 2.94 2.15 4.64 2.15h.04c1.7 0 3.32-1.19 4.64-2.16 2.54-1.84 5.17-3.62 7.78-5.39.56-.39 1.1-.84 1.56-1.36zm0-4.6c0 1.75-1.3 3.33-2.67 4.28-2.44 1.69-4.9 3.38-7.31 5.08-1.02.7-2.74 2.14-4 2.14h-.04c-1.26 0-2.98-1.44-4-2.14-2.42-1.7-4.87-3.4-7.3-5.08C1.59 10.03 0 8.26 0 6.84 0 5.31.83 4 2.5 4h23C26.86 4 28 5.12 28 6.5z'%3E%3C/path%3E%3C/svg%3E");
}

.leaflet-container {
  background-color: #d4dadc;
}

.facet-limit-active {
  --bl-facet-active-bg: rgb(var(--stanford-palo-alto-rgb));
  --bl-facet-active-item-color: rgb(var(--stanford-palo-alto-rgb));
  border-color: rgb(var(--stanford-palo-alto-rgb));
}

/* Ensure facet icons are all the same color */
.facet-label .blacklight-icons svg {
  fill: var(--stanford-60-black);
}

.header-tools > *:hover, .toggle-bookmark span[data-checkboxsubmit-target="span"]:hover {
  --bs-link-color-rgb: var(--stanford-digital-blue-dark-rgb);
  text-decoration: underline;
}

/* Override mobile view for facets section in Blacklight */
.facets {
  --bl-facets-smallish-border: none;
  --bl-facets-smallish-padding: 0;
}

/* To help vertically align on mobile */
@media (max-width: 991.98px) {
  .facets-heading {
    margin-bottom: 0;
  }
}

.sidenav .navbar-toggler:hover, .sidenav .navbar-toggler:focus, .sidenav .navbar-toggler {
  --bs-navbar-toggler-border-color: var(--stanford-digital-blue);
  color: var(--stanford-digital-blue);
  --bs-navbar-toggler-padding-y: .5rem;
}

.document-metadata.su-underline {
  --bs-link-hover-decoration: underline;
  --bs-link-hover-color-rgb: var(--stanford-digital-blue-dark-rgb);
}

/* Push footer to the bottom on short pages */
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#main-container {
  flex: 1;
}

/* Add margin for consecutive paragraphs in item descriptions */
.document-metadata p {
  margin-bottom: 0;
}

.document-metadata p + p {
  margin-top: 1rem;
}

